# oslab-XJTU

./: README.md  README1.md  README2.md  README3.md
1.1/: 1-1.c  1-2.c  1-3.c  1-4-1.c  1-4-2.c  system_call.c
1.2/: 1-2-4.c  1-2.c
1.3/: 1-3.c
1/1.1/: 1-1  1-1-wait.c  1-2  1-2.c  1-3  1-3.c  1-4-1  1-4-1.c  1-4-2.c  execl  execl.c  system_call
1/1.2/: 1-2-3.c  1-2-4.c  1-2-5.c  system_call.c
2/: 3  3.c  a.out  back.c  n1  n1.c  n2  n2.c  n2_lock1  n2_lock1.c  n2_unlock  n2_unlock.c  n3.c  n4.c
3/: CMakeLists.txt  main.c
3/include/: IO_operation.h  basic.h  command_line.h  fundamental.h  initialize.h  main_function.h  user_interface.h
3/src/: IO_operation.c  basic.c  command_line.c  fundamental.c  initialize.c  main_function.c  source.txt  user_interface.c
